--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.22.2",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "faker": "^5.5.2",
