--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "apollo-server-express": "^2.22.2",
     "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.5.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3"
   }
