--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -7,10 +7,10 @@
     "prettier/prettier": [
       "error",
       {
-        "trailingComma": "es5",
         "singleQuote": true,
         "printWidth": 120,
         "tabWidth": 2,
+        "endOfLine": "auto"
       }
     ]
   }
